Polishing.
Add since and author tags. Reorder fields.

Introduce empty VaultTokenRequest and refactor interface methods to default methods for delegation on the interface level.

See gh-690
Original pull request: gh-803